--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -19,19 +19,30 @@ format:
 
 ### Котировки
 
+*03.03.2025* Уголь
+
+**Зимний сезон заканчивается на минорной ноте**
+
+Экспортные цены на все виды угольной продукции снизились к концу зимнего периода 2025 г. Предстоящий период межсезонья и возможное сокращение импорта угля в КНР не добавляют уверенности на рынке.
+
+- рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 117-122 долл./т CFR China.
+- рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 117-121 долл./т CFR China, 130 долл./т CFR India, 132-133 долл./т CFR Indonesia.
+- рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 83 долл./т CFR China.
+
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
+
 *24.02.2025* Уголь
 
 **Китай переполнен углем…**
 
 Настроения на рынке ухудшаются вслед за ценами. Опрошенные респонденты обеспокоены низким спросом на уголь и не видят причин для улучшения ситуации на протяжении всего 2025 г. Возможности переориентации на другие рынки ограничены, Китай начал сокращать закупки на рынке спот.
 
- - Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 117-120 долл./т CFR China.
-- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 120 долл./т CFR China, 132-133 долл./т CFR Indonesia.
-- Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 85 долл./т CFR China.
+-   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 117-120 долл./т CFR China.
+-   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 120 долл./т CFR China, 132-133 долл./т CFR Indonesia.
+-   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 85 долл./т CFR China.
 
-![](../images/icon-locker.svg){width="6%"}
-[Подробнее](../demo-subscription.qmd)
-
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
 *17.02.2025* Уголь
 
@@ -55,19 +66,6 @@ format:
 -   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 150-155 долл./т CFR India, 130 долл./т CFR China.
 -   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 130 долл./т CFR China.
 -   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 87 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
-
-*27.01.2024* Уголь
-
-**Рынок ушёл на праздники**
-
-С наступлением Нового года по лунному календарю и национальных праздников в Китае активность на рынках резко снизилась. Цены на уголь зафиксировались на уровне середины января 2025 г. и, вероятно, останутся в этом диапазоне до конца праздников.
-
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 130 долл./т CFR China.
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 130 долл./т CFR China.
 
 ![](../images/icon-locker.svg){width="6%"}
 
