--- a/markets/markets-oilseed.qmd
+++ b/markets/markets-oilseed.qmd
@@ -17,6 +17,18 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*04.03.2025 Подсолнечное масло*
+
+**Окрепший рубль уронил экспортную пошлину на масло**
+
+Экспортные цены на подсолнечное масло за месяц выросли на 58 долл.
+
+Укрепление рубля опустило экспортную пошлину на подсолнечное масло почти в два раза до 9,3 тыс. т. 
+
+Индия планирует повысить импортные пошлины на растительные масла.
+ 
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *05.02.2025 Подсолнечное масло*
 
 **Импортеры теряют аппетит к пальмовому маслу**
@@ -41,17 +53,6 @@ format:
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
-*02.12.2024 Подсолнечное масло*
-
-**Индия заменяет пальмовое масло подсолнечным**
-
-Экспортные цены на подсолнечное масло за месяц выросли еще на 45 долл.
-
-Экспортная пошлина на подсолнечное масло в декабре 2024 г. вырастет в три раза до 9,2 тыс. руб.
-
-Индия по итогам 2023/24 г. нарастила импорт подсолнечного масла на 17% до 3,5 млн т.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
