--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,15 +17,28 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*03.03.2025 Пшеница*
+
+**Жаркий март угрожает индийскому урожаю пшеницы**
+
+Экспортные цены на пшеницу выросли на 6 долл. по сравнению с прошлой неделей. 
+
+Индия ожидает большой урожай пшеницы в 2024/25 г. – около 114 млн т, но опасения вызывают прогнозы небывалой жары в марте 2025 г. 
+
+Франция сократила экспорт мягкой пшеницы в Марокко в 2 раза в первой половине 2024/25 г., но надеется нарастить поставки во второй половине сезона.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+
 *24.02.2025 Пшеница*
 
 **Экспортные цены на пшеницу движутся вверх, экспортная пошлина снижается**
 
-Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей. 
+Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей.
 
 IGC снизил прогноз мировой торговли пшеницей в 2024/25 г. на 1 млн т до 197 млн т из-за снижения китайского импорта.
 
-Экспортная пошлина на пшеницу с 26 февраля 2025 г. снизится на 25% до  2 743 руб. на фоне укрепления рубля. 
+Экспортная пошлина на пшеницу с 26 февраля 2025 г. снизится на 25% до 2 743 руб. на фоне укрепления рубля.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
@@ -62,18 +75,6 @@ Reuters пишет, что Китай откладывает закупки им
 Правительство РФ установило региональные экспортные квоты на кукурузу с 15 февраля по 30 июня 2025 г. для аграриев Приморского края - 337 тыс. т и Амурской области - 200 тыс. т.
 
 Канада может сократить производство твердой пшеницы в 2025 г. на 12% до 5,2 млн т.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*27.01.2025 Пшеница*
-
-**Экспорт зерна для аргентинских аграриев стал выгоднее**
-
-Экспортные цены на пшеницу снизились на 1 долл. по сравнению с прошлой неделей.
-
-Аргентина до конца июня 2025 г. снизила экспортные пошлины на зерновые с 12% до 9,5% для поддержки аграриев.
-
-Экспорт пшеницы из Австралии в 2024/25 г. может вырасти на 21% до 24 млн т по прогнозам USDA.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
