--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [-0,6 п.]{.my-custom-class style="color:#f6514c;"}** ([**-0,8 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [-1,9 п.]{.my-custom-class style="color:#f6514c;"}** ([**-2,0 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефть [**+2,1%**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-12%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: нефть [**-3,7%**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-6,6%**]{.my-custom-class style="color:#f6514c;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**+0,6 п.**]{.my-custom-class style="color:#44bf78;"}, трубопроводный газ [**-1,1 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: нефть [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-0,6 п.**]{.my-custom-class style="color:#f6514c;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
@@ -199,9 +199,9 @@ discount_plot
 
 ### [Ежемесячный мониторинг]{.my-custom-class style="color:#1a4afc;"}
 
-06 февраля 2024. Сырьевой индекс ЦЦИ. **Квоты, пошлины и торговые войны разгорели цены**
+5 марта 2025. Сырьевой индекс ЦЦИ. **Экспортные цены вернулись на исходную**
 
-[Материалы -\>](reports/2025-01 Сырьевой индекс ЦЦИ.pdf)
+[Материалы -\>](reports/2025-02 Сырьевой индекс ЦЦИ.pdf)
 
 ### [События]{.my-custom-class style="color:#1a4afc;"}
 
