--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -2,21 +2,43 @@
 title: "Подписка"
 lang: ru
 toc: false
-format:
-   html: 
-     page-layout: custom
-     grid:
-       body-width: 900px
-     css: |
-       main {
-         margin-left: 50px !important;  /* Moves the entire content area */
-       }
-       .quarto-container {
-         margin-left: 50px !important; /* Ensures all content shifts */
-       }
+title-block-banner: none
+format: 
+  html:
+    footnote-hover: true
+    meta:
+      - name: viewport
+        content: "width=device-width, initial-scale=1"
 ---
 
-## ![](../images/icon-subscription.svg)Подписка {.my-custom-class style="margin-left:3%;"}
+<script>
+document.addEventListener("DOMContentLoaded", function() {
+  var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+  var tooltipList = tooltipTriggerList.map(function(tooltipTriggerEl) {
+    return new bootstrap.Tooltip(tooltipTriggerEl);
+  });
+});
+</script>
+
+<!-- Inline CSS -->
+
+<style>
+@media only screen and (max-width: 768px) {
+  
+  .panel-tabset {
+    width: 100% !important;
+    max-width: 100%;
+  }
+  .panel-tabset tab-content {
+    width: 100%;
+    overflow-x: auto;
+    display: block;
+  }
+}
+
+</style>
+
+# ![](../images/icon-subscription.svg)Подписка
 
 Подписка включает регулярно обновляемые данные о ценах в формате Excel и аналитические отчеты.
 
@@ -30,73 +52,131 @@ format:
 
 [Оформить подписку](subscribe.qmd)
 
-## Список продуктов и образцы отчетов
+# Перечень подписок
 
-### Российский уголь
+::: panel-tabset
+## Российский уголь
 
--   [экспортные цены](reports/2024-09-09%20PBC%20Weekly%20Coal.pdf) и нетбэки на энергетический и коксующийся уголь (еженедельно) - [аналитика и котировки](reports/2024-09%20PBC%20Quarterly%20Coal%20NB.pdf);
--   внутренние цены на коксующийся уголь (ежемесячно) - аналитика и котировки;
--   ставки ж.д. логистики угля (ежемесячно) - аналитика и котировки;
--   перевалки угля (раз в полгода) - аналитика и котировки;
--   [нетбэки](reports/2024-09%20PBC%20Quarterly%20Coal%20NB.pdf) и анализ топливных затрат в российской электроэнергетике (ежеквартально);
--   [ставки фрахта на уголь (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf);
--   [большой ежеквартальный отчет о рынке](reports/2024-05%20ЦЦИ_Квартальный_уголь_№2_rus.pdf) и вебинар ([пример вебинаров](https://www.youtube.com/@CCI.Friday)).
--   Дашборд с историческими рядами (обновляется еженедельно).
+![](images/icon-coal.svg)
 
-### Российская нефть
+| Продукт | Периодичность | Формат | Демоотчет |
+|------------------|------------------|------------------|------------------|
+|  |  |  |  |
+| Экспортные цены на уголь | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/2024-09-09%20PBC%20Weekly%20Coal.pdf) |
+| Нетбеки на энергетический и коксующийся уголь | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="14 марта / 16 июнь / 12 сентября / 12 декабря"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/2024-09%20PBC%20Quarterly%20Coal%20NB.pdf) |
+| Внутренние цены на коксующийся уголь | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/2024-09-09%20PBC%20Weekly%20Coal.pdf) |
+| Ставки ж.д. логистики угля | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="последний рабочий день месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/2024-06%20%D0%A6%D0%A6%D0%98%20%D0%9F%D0%BE%D0%BB%D1%83%D0%B2%D0%B0%D0%B3%D0%BE%D0%BD%D1%8B.pdf) |
+| Ставки перевалки угля | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/%D0%A1%D1%82%D0%B0%D0%B2%D0%BA%D0%B8%20%D0%BF%D0%B5%D1%80%D0%B5%D0%B2%D0%B0%D0%BB%D0%BA%D0%B8%20%D1%83%D0%B3%D0%BB%D1%8F.pdf) |
+| Нетбэки и анализ топливных затрат в российской электроэнергетике | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="14 марта / 16 июнь / 12 сентября / 12 декабря"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/%D0%9D%D1%8D%D1%82%D0%B1%D1%8D%D0%BA%D0%B8%20%D0%BD%D0%B0%20%D1%83%D0%B3%D0%BE%D0%BB%D1%8C.pdf) |
+| Ставки фрахта на уголь | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика | [Ссылка](https://pbc-index.ru/reports/freight/%D0%A1%D1%82%D0%B0%D0%B2%D0%BA%D0%B8%20%D1%84%D1%80%D0%B0%D1%85%D1%82%D0%B0%20%D0%BD%D0%B0%20%D1%83%D0%B3%D0%BE%D0%BB%D1%8C.pdf) |
+| Большой отчет об экспортных рынках российского угля и вэбинар | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="до конца января/ мая/августа/ноября"} | отчет + вэбинар | [Ссылка](https://pbc-index.ru/reports/2024-05%20%D0%A6%D0%A6%D0%98_%D0%9A%D0%B2%D0%B0%D1%80%D1%82%D0%B0%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9_%D1%83%D0%B3%D0%BE%D0%BB%D1%8C_%E2%84%962_rus.pdf) |
+| Дэшборд с историческими рядами | еженедельно | дэшборд |  |
 
--   экспортные цены и дифференциалы на российскую нефть (раз в 2 недели) - аналитика[^1] и котировки;
--   экспортные цены и дифференциалы на российские нефтепродукты (раз в 2 недели) - аналитика и котировки;
--   ставки фрахта нефти (еженедельно) - [аналитика и котировки](reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf);
--   ставки фрахта нефтепродуктов (еженедельно)- [аналитика и котировки](reports/2024-07-17%20PBC%20Weekly%20OilProduct%20Freight.pdf);
--   ставки перевалки нефти (раз в полгода) – аналитика и котировки.
+## Российская нефть
 
-[^1]: Пример отчета предоставляется по запросу – напишите нам [subscribe\@pbc-index.ru](mailto:subscribe@pbc-index.ru)
+![](images/icon-tanker.svg)
 
-### Российский газ
+| продукт | периодичность | формат | демоотчет |
+|:-----------------:|:----------------:|:----------------:|:----------------:|
+| Экспортные цены и дифференциалы на российскую нефть | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждую среду рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/oil/Экспортные%20цены%20и%20дифференциалы%20на%20российскую%20нефть.pdf) |
+| Экспортные цены и дифференциалы на российские нефтепродукты | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждую среду рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/oil/Экспортные%20цены%20и%20дифференциалы%20на%20российские%20нефтепродукты.pdf) |
+| Ставки фрахта нефти | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/oil/Ставки%20фрахта%20нефти.pdf) |
+| Ставки фрахта нефтепродуктов | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/oil/Ставки%20фрахта%20нефтепродуктов.pdf) |
+| Ставки перевалки нефти | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/oil/Ставки%20перевалки%20нефти.pdf) |
+| Ставки перевалки нефтепродуктов | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/oil/Ставки%20перевалки%20нефтепродуктов.pdf) |
 
--   экспортные цены на трубопроводный и сниженный газ (ежемесячно), ставки фрахта СПГ (ежемесячно) – [аналитика](reports/2024-10%20ЦЦИ%20Газ.pdf) и котировки;
--   [большой квартальный отчет](reports/2024-02%20PBC%20Quarterly%20Gas.pdf) о рынке газа и влияющих отраслях;
--   добыча, экспорт, цены (ежеквартально) - [консенсус-прогноз](reports/2024-02%20PBC%20Quarterly%20Gas%20Consensus.pdf)
+## Российский газ
 
-### Российское растениеводство
+![](images/icon-gas.svg)
 
--   экспортные цены на пшеницу и нетбэки (еженедельно) - [аналитика и котировки](reports/2024-07-12%20ЦЦИ%20Пшеница.pdf);
--   подсолнечное масло (ежемесячно) - [аналитика и котировки](reports/2024-07%20ЦЦИ%20Подсолнечное%20масло.pdf);
--   фрахт зерна (еженедельно) - [аналитика и котировки](reports/2024-07-15%20ЦЦИ%20Фрахт%20зерновых.pdf);
--   ставки перевалки зерна (раз в полгода) – аналитика и котировки;
--   большой полугодовой отчет о рынке – аналитика и вебинар ([пример](https://pbc-index.ru/events/2024-09-13-wheat.html));
--   урожай, экспорт зерновых и масличных (ежеквартально) – [консенсус-прогноз](reports/2024-02%20GPB%20Quarterly%20Agro%20Consensus.pdf).
+| продукт | периодичность | формат | демоотчет |
+|:-----------------:|:----------------:|:----------------:|:----------------:|
+| Экспортные цены на трубопроводный и сжиженный газ (СПГ) | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="10 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/Экспортные%20цены%20на%20трубопроводный%20и%20сжиженный%20газ%20(СПГ).pdf) |
+| Ставки фрахта СПГ | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="10 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/Ставки%20фрахта%20СПГ.pdf) |
+| Большой отчет о рынке газа и влияющих отраслях | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/Большой%20отчет%20о%20рынке%20газа%20и%20влияющих%20отраслях.pdf) |
+| Прогноз по добыче, экспорту, ценам | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | консенсус-прогноз | [Ссылка](https://pbc-index.ru/reports/gas/Прогноз%20по%20добыче,%20экспорту,%20ценам.pdf) |
 
-### Российская сухопутная логистика
+## Российское растениеводство
 
--   ставки на полувагоны (ежемесячно) - [аналитика и котировки](reports/2024-06%20ЦЦИ%20Полувагоны.pdf);
--   фитинговые платформы и контейнеры (ежемесячно) - [аналитика и котировки](reports/2024-07%20ЦЦИ%20ЖД%20контейнеры.pdf);
--   [нетбэки на уголь (ежеквартально)](reports/2024-09%20PBC%20Quarterly%20Coal%20NB.pdf);
--   ставки перевалки угля, зерна, нефтеналивных грузов, контейнеров (раз в полгода) – аналитика и котировки;
--   ставки на склады (ежеквартально) - [консенсус-прогноз](reports/2024-02%20PBC%20Office%20and%20Warehouse%20Quarterly%20Consensus.pdf)
+![](images/icon-wheat.svg)
 
-### Российская морская логистика
+| продукт | периодичность | формат | демоотчет |
+|:-----------------------:|:--------------:|:--------------:|:--------------:|
+| Экспортные цены на пшеницу и нетбэки | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/Экспортные%20цены%20на%20пшеницу%20и%20нетбэки.pdf) |
+| Подсолнечное масло | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="первый вторник месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/подсолнечное%20масло.pdf) |
+| Ставки фрахта зерна | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/Ставки%20фрахта%20зерна.pdf) |
+| Ставки перевалки зерна | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/Ставки%20перевалки%20зерна.pdf) |
+| Большой отчет о рынке растениеводства | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Май/ноябрь"} | аналитика и вебинар | [Ссылка](https://pbc-index.ru/events/2024-09-13-wheat.html) |
+| Прогноз по урожаю, экспорту зерновых и масличных | [ежеквартально <sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | консенсус-прогноз | [Ссылка](https://pbc-index.ru/reports/agro/Агро-консенсус.pdf) |
 
--   [ставки фрахта на нефть (еженедельно)](reports/2024-07-17_PBC_Weekly_Crude_Freight.pdf), [нефтепродукты (еженедельно)](reports/2024-07-17%20PBC%20Weekly%20OilProduct%20Freight.pdf), [зерно (еженедельно)](reports/2024-07-15%20PBC%20Weekly%20Wheat%20Freight.pdf), [уголь (еженедельно)](reports/2024-09-17%20ЦЦИ%20Фрахт%20угля.pdf), контейнеры (ежемесячно) - [аналитика и котировки](reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf);
--   [цены на контейнеровозы (ежемесячно)](/reports/2024-07%20PBC%20Montly%20Container%20Fleet.pdf);
--   ставки перевалки нефтеналивных грузов, угля, зерна, контейнеров (раз в полгода) - аналитика и котировки.
+## Российская сухопутная логистика
 
-### Российские контейнеры
+![](images/icon-trolley.svg)
 
--   ставки на фитинговые платформы и контейнеры (ежемесячно) - [аналитика и котировки](reports/2024-07%20ЦЦИ%20ЖД%20контейнеры.pdf);
--   ставки фрахта контейнеров (ежемесячно) - [аналитика и котировки](reports/2024-07%20PBC%20Montly%20Container%20Freight.pdf);
--   цены на контейнеровозы (ежемесячно) - [аналитика и котировки](/reports/2024-07%20PBC%20Montly%20Container%20Fleet.pdf);
--   ставки перевалки контейнеров (раз в полгода) - аналитика и котировки.
+| продукт | периодичность | формат | демоотчет |
+|:-----------------------------:|:------------:|:------------:|:------------:|
+| Ставки на полувагоны | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Последний рабочий день месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/ставки%20на%20полувагоны.pdf) |
+| Фитинговые платформы и контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/Фитинговые%20платформы%20и%20контейнеры.pdf) |
+| Нэтбэки на уголь | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="14 марта / 16 июнь / 12 сентября / 12 декабря"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/Нэтбэки%20на%20уголь.pdf) |
+| Ставки перевалки угля, зерна, нефтеналивных грузов, контейнеров (цена за единицу) | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/Ставки%20перевалки%20угля.pdf) |
+| Прогноз по ставкам на склады(коммерческая недвижимость) | [ежеквартально <sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="5 неделя квартала"} | консенсус-прогноз | [Ссылка](https://pbc-index.ru/reports/logistics/Пргноз%20по%20ставкам%20на%20склады(коммерческая%20недвижимость).pdf) |
 
-### Российские удобрения
+## Российская морская логистика
 
--   экспортные цены на минеральные (еженедельно) – [аналитика и котировки](reports/2025-01-20%20ЦЦИ%20Минеральные%20удобрения.pdf);
--   большой квартальный отчет о рынке газа и удобрениях и вэбинар ([пример](https://www.youtube.com/@CCI.Friday));
--   производство, экспорт, цены (ежеквартально) - консенсус-прогноз.
+![](images/icon-ship.svg)
 
-### Российские метанол и ароматика
+| Ставки фрахта на нефть | еженедельно | аналитика и котировки | Ссылка |
+|:---------------------------:|:-------------:|:-------------:|:-------------:|
+| Ставки фрахта на нефтепродукты | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий вторник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/%D0%A1%D1%82%D0%B0%D0%B2%D0%BA%D0%B8%20%D1%84%D1%80%D0%B0%D1%85%D1%82%D0%B0%20%D0%BD%D0%B0%20%D0%BD%D0%B5%D1%84%D1%82%D0%B5%D0%BF%D1%80%D0%BE%D0%B4%D1%83%D0%BA%D1%82%D1%8B.pdf) |
+| Ставки фрахта на зерно | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий вторник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Ставки%20фрахта%20на%20зерно.pdf) |
+| Ставки фрахта на уголь | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий вторник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Ставки%20фрахта%20на%20уголь.pdf) |
+| Ставки фрахта на контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Фрахт контейнеров.pdf) |
+| Показатели цен на контейнеровозы | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Аренда контейнеровозов.pdf) |
+| Ставки перевалки нефтеналивных грузов, угля, зерна, контейнеров | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Ставки%20перевалки.pdf) |
 
--   внутренние цены на метанол, цены на метанол в Китае, ставки фрахта на перевозку российского метанола (ежемесячно) – [аналитика и котировки](reports/2024-11%20PBC%20Monthly%20Methanol.pdf);
--   внутренние цены на стирол, бензол (еженедельно) – [аналитика и котировки](reports/2024-07-18%20PBC%20Weekly%20Aromatics.pdf);
--   внутренние цены на каустическую соду (ежемесячно) – аналитика и котировки.
+## Российские контейнеры
+
+![](images/icon-barcode.svg)
+
+| продукт | периодичность | формат | демоотчет |
+|:-----------------------:|:--------------:|:--------------:|:--------------:|
+| Ставки на фитинговые платформы и контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Ставки%20на%20фитинговые%20платформы%20и%20контейнеры.pdf) |
+| Ставки фрахта на контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Ставки%20фрахта%20на%20контейнеры.pdf) |
+| Показатели цен на контейнеровозы | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Показатели%20цен%20на%20контейнеровозы.pdf) |
+| Ставки перевалки контейнеров | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Ставки%20перевалки%20контейнеров.pdf) |
+
+## Российские удобрения
+
+![](images/icon-agro.svg)
+
+| продукт | периодичность | формат | демоотчет |
+|:-----------------------:|:--------------:|:--------------:|:--------------:|
+| Экспортные цены на азотные и фосфорные удобрения | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/fertilizers/Экспортные%20цены%20на%20азотные%20и%20фосфорные%20удобрения.pdf) |
+| Ставки фрахта удобрений | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/fertilizers/Ставки фрахта удобрений.pdf) |
+| Большой отчет о рынке газа и удобрениях и вэбинар | [ежеквартально <sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | аналитика и котировки + вэбинар | [Ссылка](https://pbc-index.ru/reports/fertilizers/2024-05%20ЦЦИ%20Квартальный%20обзор%20по%20газу.pdf) |
+| Прогноз по производству, экспорту, ценам | ежеквартально | консенсус-прогноз | [Ссылка](https://pbc-index.ru/forecasts/forecast-fertilizers.html) |
+
+## Российские метанол и ароматика
+
+![](images/icon-chemicals2.svg)
+
+| продукт | периодичность | формат | демоотчет |
+|:-----------------------------:|:------------:|:------------:|:------------:|
+| Внутренние цены на метанол | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="середина месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/метанол%20демо-отчет%20.pdf) |
+| внутренние цены на ароматические углероды и их производные в России: стирол, бензол | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждую рабочую пятницу"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/внутренние%20цены%20на%20ароматические%20углероды%20демо-отчет.pdf) |
+| внутренние цены на каустическую соду \*new | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Каждый последний рабочий вторник месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/внутренние%20цены%20на%20каустическую%20соду%20демо-отчет.pptx.pdf) |
+
+## Цены на этилен и полиэтилен в России \*new
+
+![](images/icon-chemicals2.svg)
+
+| продукт | периодичность | формат | демоотчет |
+|:-------------------------:|:-------------:|:-------------:|:-------------:|
+| отчет по внутренним цены на этилен и полиэтилен | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Каждую рабочую пятницу"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/Этилен%20и%20Полиэтилен%20демо-отчет%20ред..pdf) |
+
+## Сырьевой индекс \*new
+
+| продукт | периодичность | формат | демоотчет |
+|:-----------------------------:|:------------:|:------------:|:------------:|
+| композитный индекс товаров российского экспорта на основе котировок ЦЦИ \*new | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="новый продукт, готовим график"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/pbc-index.html) |
+:::
