--- a/index.qmd
+++ b/index.qmd
@@ -11,6 +11,10 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Актуальное
 
+5 марта 2025. Сырьевой индекс ЦЦИ. **Экспортные цены вернулись на исходную**
+
+[Мониторинг февраль -\>](reports/2025-02 Сырьевой индекс ЦЦИ.pdf)
+
 7 февраля 2025. **Пятница с ЦЦИ: логистика**
 
 [Материалы →](events/2025-02-07-logistics.qmd)
@@ -31,9 +35,6 @@ format:
 
 [Пресс-релиз →](events/2025-01-20-fertilizers.qmd)
 
-25 декабря 2024. Сырьевой индекс ЦЦИ. **в 2024 г.: не ТЭКом единым**
-
-[Мониторинг декабрь →](pdf/2024-12-cci-index.pdf)
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -42,6 +43,25 @@ format:
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
+
+**04.03.2025 Подсолнечное масло**
+
+Экспортные цены на подсолнечное масло за месяц выросли на 58 долл. 
+Укрепление рубля опустило экспортную пошлину на подсолнечное масло почти в два раза до 9,3 тыс. т. Индия планирует повысить импортные пошлины на растительные масла.
+
+[Подробнее →](markets/markets-oilseed.qmd)
+
+**03.03.2025 Пшеница**
+
+Экспортные цены на пшеницу выросли на 6 долл. по сравнению с прошлой неделей. Индия ожидает большой урожай пшеницы в 2024/25 г. – около 114 млн т, но опасения вызывают прогнозы небывалой жары в марте 2025 г. 
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+**03.03.2025 Уголь**
+
+Настроения на рынке ухудшаются вслед за ценами. Опрошенные респонденты обеспокоены низким спросом на уголь и не видят причин для улучшения ситуации на протяжении всего 2025 г. Возможности переориентации на другие рынки ограничены, Китай начал сокращать закупки на рынке спот.
+
+[Подробнее →](markets/markets-coal.qmd)
 
 **28.02.2025 Сухопутная логистика. Полувагоны**
 
@@ -60,18 +80,6 @@ format:
 Рязанский нефтеперерабатывающий завод (НПЗ) – один из крупнейших производителей автомобильного бензина – снова остановил производство.Биржевые цены на бензин не отреагировали на последние внеплановые остановки НПЗ, показав снижение более чем на 13% по сравнению с пиком в 1 декаде февраля.
 
 [Подробнее →](markets/markets-oil-products.qmd)
-
-**24.02.2025 Уголь**
-
-Настроения на рынке ухудшаются вслед за ценами. Опрошенные респонденты обеспокоены низким спросом на уголь и не видят причин для улучшения ситуации на протяжении всего 2025 г. Возможности переориентации на другие рынки ограничены, Китай начал сокращать закупки на рынке спот.
-
-[Подробнее →](markets/markets-coal.qmd)
-
-**24.02.2025 Пшеница**
-
-Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей. IGC снизил прогноз мировой торговли пшеницей в 2024/25 г. на 1 млн т до 197 млн т из-за снижения китайского импорта. Экспортная пошлина на пшеницу с 26 февраля 2025 г. снизится на 25% до 2 743 руб. на фоне укрепления рубля.
-
-[Подробнее →](markets/markets-wheat.qmd)
 
 **18.02.2025 Перевозки зерна**
 
@@ -97,12 +105,6 @@ format:
 
 [Подробнее →](markets/markets-fertilizers.qmd)
 
-**05.02.2025 Подсолнечное масло**
-
-Экспортные цены на подсолнечное масло за месяц выросли на 13 долл. Индия снизила импорт пальмового масла в январе 2025 г. до пятилетнего минимума – 370 тыс. т. Пальмовое масло вновь стало самым дешевым на рынке, дисконт к подсолнечному маслу в начале февраля 2025 г. вырос до 83 долл.
-
-[Подробнее →](markets/markets-oilseed.qmd)
-
 **29.01.2025 Перевозки нефтепродуктов**
 
 После резкого скачка из-за ввода санкций против российской нефтяной отрасли, темпы роста ставок фрахта замедлились.
@@ -114,7 +116,6 @@ format:
 Отскока ставок фрахта в преддверии китайского Нового года не случилось, ставки фрахта в сегменте Panamax (80 тыс. т) из порта Усть-Луга в Северный Китай снизились на 5% н/н.
 
 [Подробнее →](markets/markets-sea-freight.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
