--- a/events.qmd
+++ b/events.qmd
@@ -1,5 +1,6 @@
 ---
 title: "События"
+toc: false
 ---
 
 ### Пятница с ЦЦИ: логистика
@@ -44,9 +45,25 @@ title: "События"
 
 [Материалы вебинара](events/2024-09-13-wheat.qmd)
 
+### Пятница с ЦЦИ: газ
+
+31 мая 2024
+
+-   Почему снижаются цены на газ в мире?
+-   Что происходит на газовом рынке США?
+-   СПГ перетекает из Европы в Азию?
+-   Станет ли Индия новым драйвером спроса на СПГ?
+
+[Материалы вебинара](events/2024-05-31-gas.qmd)
+
 ### Пятница с ЦЦИ: уголь
 
 31 мая 2024
+
+-   Уголь теперь дешевый? Кто поддерживает спрос, а кто давит объёмами?
+-   ЕС и Турция. Закат и возрождение угля.
+-   Идем на Восток. Чего ждать от Китая и Индии?
+-   Как начинает 2024 г. российский экспорт?
 
 [Материалы вебинара](events/2024-05-31-coal.qmd)
 
@@ -55,3 +72,14 @@ title: "События"
 27 мая 2024
 
 [Материалы вебинара](events/2024-05-27-PBC-index.qmd)
+
+### Пятница с ЦЦИ: газ
+
+9 февраля 2024
+
+-   Деглобализация и высокие процентные ставки для экспортеров газа
+-   Предложение и спрос на газ в мире
+-   Бенчмарки мировых цен на газ
+
+[Материалы вебинара](events/2024-02-09-gas.qmd)
+
