--- a/index.qmd
+++ b/index.qmd
@@ -11,9 +11,13 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Актуальное
 
+21 марта 2025. **Пятница с ЦЦИ: Газ и Химия**
+
+[Анонс →](events/2025-03-21-gas.qmd)
+
 5 марта 2025. Сырьевой индекс ЦЦИ. **Экспортные цены вернулись на исходную**
 
-[Мониторинг февраль -\>](reports/2025-02 Сырьевой индекс ЦЦИ.pdf)
+[Мониторинг февраль -\>](reports/2025-02%20Сырьевой%20индекс%20ЦЦИ.pdf)
 
 7 февраля 2025. **Пятница с ЦЦИ: логистика**
 
@@ -30,11 +34,6 @@ format:
 30 января 2025. **Налоговая цена на нефть в макроконсенсусе ЦЦИ**
 
 [Пресс-релиз →](events/2025-01-30-Macro-consensus.qmd)
-
-20 января 2025. **ЦЦИ начал публиковать индексы на фосфорсодержащие удобрения**
-
-[Пресс-релиз →](events/2025-01-20-fertilizers.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -44,24 +43,37 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Новости рынков
 
-**04.03.2025 Подсолнечное масло**
+**17.03.2025 Сухопутная контейнерная логистика**
 
-Экспортные цены на подсолнечное масло за месяц выросли на 58 долл. 
-Укрепление рубля опустило экспортную пошлину на подсолнечное масло почти в два раза до 9,3 тыс. т. Индия планирует повысить импортные пошлины на растительные масла.
+За последний месяц ставки на прямые ускоренные контейнерные поезда из Китая в Россию упали более чем на четверть и обновили минимум последних трёх лет. Железнодорожный транспорт – не только самый быстрый, но и самый бюджетный способ доставки контейнеров из КНР: FOR Шанхай – FOR Москва (40’HC COC) = 4,8 тыс. долл.
 
-[Подробнее →](markets/markets-oilseed.qmd)
+[Подробнее →](markets/markets-railways.qmd)
 
-**03.03.2025 Пшеница**
-
-Экспортные цены на пшеницу выросли на 6 долл. по сравнению с прошлой неделей. Индия ожидает большой урожай пшеницы в 2024/25 г. – около 114 млн т, но опасения вызывают прогнозы небывалой жары в марте 2025 г. 
-
-[Подробнее →](markets/markets-wheat.qmd)
-
-**03.03.2025 Уголь**
+**17.03.2025 Уголь**
 
 Настроения на рынке ухудшаются вслед за ценами. Опрошенные респонденты обеспокоены низким спросом на уголь и не видят причин для улучшения ситуации на протяжении всего 2025 г. Возможности переориентации на другие рынки ограничены, Китай начал сокращать закупки на рынке спот.
 
 [Подробнее →](markets/markets-coal.qmd)
+
+**17.03.2025 Пшеница**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели.В мартовском прогнозе COCERAL производство пшеницы в ЕС-27 в 2025 г. снижено на 2 млн т до 124,4 млн т. 
+USDA снизило прогноз китайского импорта пшеницы в 2024/25 г. на 1,5 млн т до 6,5 млн т. 
+
+[Подробнее →](markets/markets-wheat.qmd)
+
+**17.03.2025 Минеральные удобрения**
+
+За прошедшую неделю индексы цен Prilled Urea FOB Baltic и Granular Urea FOB Baltic уменьшились на 3%. 
+
+[Подробнее →](markets/markets-fertilizers.qmd)
+
+
+**04.03.2025 Подсолнечное масло**
+
+Экспортные цены на подсолнечное масло за месяц выросли на 58 долл. Укрепление рубля опустило экспортную пошлину на подсолнечное масло почти в два раза до 9,3 тыс. т. Индия планирует повысить импортные пошлины на растительные масла.
+
+[Подробнее →](markets/markets-oilseed.qmd)
 
 **28.02.2025 Сухопутная логистика. Полувагоны**
 
@@ -92,18 +104,6 @@ format:
 Рекордные объёмы импорта толкают вверх ставки перевалки контейнеров на Дальнем Востоке.
 
 [Подробнее →](markets/markets-sea-container-ports.qmd)
-
-**17.02.2025 Сухопутная контейнерная логистика**
-
-Ставки на прямые ускоренные контейнерные поезда из Китая в Россию обвалились в феврале. Слабая активность и недостаток грузовой базы в КНР вынуждают операторов снижать стоимость перевозок более чем на 20% к ценам января.
-
-[Подробнее →](markets/markets-railways.qmd)
-
-**10.02.2025 Минеральные удобрения**
-
-Индексы цен Prilled и Granular Urea FOB Baltic за прошедшую неделю увеличились на 1%.
-
-[Подробнее →](markets/markets-fertilizers.qmd)
 
 **29.01.2025 Перевозки нефтепродуктов**
 
