--- a/markets/markets-gas.qmd
+++ b/markets/markets-gas.qmd
@@ -20,12 +20,11 @@ format:
 
 **Рынок газа резко перевернулся**
 
-В 2024 г. страны Азиатско-Тихоокеанского региона были основными драйверами роста спроса на газ, а ЕС продолжал сокращать потребление большую часть года. 
+В 2024 г. страны Азиатско-Тихоокеанского региона были основными драйверами роста спроса на газ, а ЕС продолжал сокращать потребление большую часть года.
 
 В начале 2025 г. ситуация абсолютно противоположная, и причиной тому являются погодные условия. Холодная безветренная зима в сочетании с сокращением импорта российского газа привели к резкому взлету спроса и цен на газ в Европе. В Азии потребление, наоборот, снижается из-за теплой зимы.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *01.2025 Газ*
 
@@ -36,7 +35,6 @@ format:
 В начале 2025 г. ситуация абсолютно противоположная, и причиной тому являются погодные условия. Холодная безветренная зима в сочетании с сокращением импорта российского газа привели к резкому взлету спроса и цен на газ в Европе. В Азии потребление, наоборот, снижается из-за теплой зимы.
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
@@ -94,6 +92,13 @@ hc
 *16 октября 2024. Аналитика: газ*
 
 [Материалы →](../events/2024-10-16-gas.qmd)
+
+### События
+
+*25 октября 2024. Пятница с ЦЦИ: газ*
+
+[Материалы →](../events/2024-10-25-gas.qmd)
+
 :::
 
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
