--- a/markets/markets-railways.qmd
+++ b/markets/markets-railways.qmd
@@ -17,6 +17,16 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*17.03.2025*
+
+**Март - для импортёров фарт**
+
+-   За последний месяц ставки на прямые ускоренные контейнерные поезда из Китая в Россию упали более чем на четверть и обновили минимум последних трёх лет. Железнодорожный транспорт – не только самый быстрый, но и самый бюджетный способ доставки контейнеров из КНР: FOR Шанхай – FOR Москва (40’HC COC) = 4,8 тыс. долл.
+-   Падение объёмов импорта корректирует вниз ставки выдачи контейнеров в Китае и снижает доплаты российским грузоотправителям при аренде контейнеров для экспортных перевозок. Субсидии за пользование 40-футовыми контейнерами на маршруте Иркутск – города КНР впервые за последние полгода сменились необходимостью платы владельцу тары.
+-   Ставки аренды 80-фут. фитинговых платформ держатся на уровне 2,73 тыс. руб./ваг.-сут. без НДС.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *17.02.2025*
 
 **Окончание праздников в Китае не оправдало ожиданий рынка**
@@ -34,16 +44,6 @@ format:
 -   Операторы готовы отправлять контейнеры в восточном направлении почти бесплатно: в январе ставки на перевозку 40 футовых контейнеров из Москвы в Новосибирск и Владивосток обновили минимумы последних лет.
 -   Ставки на прямые контейнерные поезда из Китая в Россию снизились за месяц на 6-7% до 7,3– 8,1 тыс. долл.
 -   Контейнерные перевозки по сети РЖД обновили два рекорда: в декабре во всех видах сообщения отправлено 686,4 тыс. ДФЭ (исторический максимум в течение календарного месяца), а за 12 мес. 2024 г.– 7,88 млн ДФЭ (максимум в течение календарного года).
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*16.12.2024*
-
-**Контейнерный рынок играет по своим правилам**
-
--   Несмотря на индексацию грузового железнодорожного тарифа, ставки на перевозку контейнерных грузов по наиболее востребованным внутрироссийским маршрутам снизились. Ставки на прямые контейнерные поезда из Китая в Россию не показали в декабре заметной динамики, однако стоимость ж.-д. плеча на мультимодальных маршрутах через порты Дальнего Востока продолжает расти уже шестой месяц подряд.
--   Железная дорога рассинхронизировалась с портами: перевозки контейнеров по сети РЖД снизились в ноябре на 1,4% г/г, а контейнерооборот морских портов России вырос на 31% г/г и установил исторический рекорд.
--   На сети РЖД вводятся новые конвенционные ограничения на погрузку контейнеров назначением на станции Подмосковья. Столичные терминалы не справляются с приёмом контейнерных поездов.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 :::
