--- a/markets/markets-wheat.qmd
+++ b/markets/markets-wheat.qmd
@@ -17,18 +17,41 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*17.03.2025 Пшеница*
+
+**ЕС снижает ожидания по урожаю пшеницы в 2025 г.**
+
+Экспортные цены на пшеницу остались на уровне прошлой недели.
+
+В мартовском прогнозе COCERAL производство пшеницы в ЕС-27 в 2025 г. снижено на 2 млн т до 124,4 млн т. 
+
+USDA снизило прогноз китайского импорта пшеницы в 2024/25 г. на 1,5 млн т до 6,5 млн т. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
+*10.03.2025 Пшеница*
+
+**Китай намерен производить не менее 700 млн т зерна в год**
+
+Экспортные цены на пшеницу снизились на 3 долл. по сравнению с прошлой неделей.
+
+Китай планирует произвести 700 млн т зерна в 2025 г., поддерживая достигнутый в 2024 г. уровень.
+
+Индийские мукомолы просят правительство отменить или снизить 40% импортную пошлину на пшеницу для пополнения запасов.
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *03.03.2025 Пшеница*
 
 **Жаркий март угрожает индийскому урожаю пшеницы**
 
-Экспортные цены на пшеницу выросли на 6 долл. по сравнению с прошлой неделей. 
+Экспортные цены на пшеницу выросли на 6 долл. по сравнению с прошлой неделей.
 
-Индия ожидает большой урожай пшеницы в 2024/25 г. – около 114 млн т, но опасения вызывают прогнозы небывалой жары в марте 2025 г. 
+Индия ожидает большой урожай пшеницы в 2024/25 г. – около 114 млн т, но опасения вызывают прогнозы небывалой жары в марте 2025 г.
 
 Франция сократила экспорт мягкой пшеницы в Марокко в 2 раза в первой половине 2024/25 г., но надеется нарастить поставки во второй половине сезона.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *24.02.2025 Пшеница*
 
@@ -51,30 +74,6 @@ IGC снизил прогноз мировой торговли пшеницей
 USDA снизило прогноз экспорта пшеницы в мире в 2024/25 г. еще на 3 млн т до 209 млн т.
 
 Агентство FranceAgriMer снизило прогноз экспорта мягкой пшеницы из Франции в 2024/25 г. еще на 100 тыс. т до минимальных 3,4 млн т.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*10.02.2025 Пшеница*
-
-**Китай насытился пшеницей?**
-
-Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей.
-
-Минсельхоз РФ распределил основную часть квоты на экспорт пшеницы в 2025 г. между 219 компаниями, 23% объема квоты получила «Грейн гейтс».
-
-Reuters пишет, что Китай откладывает закупки импортной пшеницы на фоне достаточного предложения на внутреннем рынке.
-
-![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*03.02.2025 Пшеница*
-
-**Дальневосточная кукуруза поедет на экспорт**
-
-Экспортные цены на пшеницу выросли на 3 долл. по сравнению с прошлой неделей.
-
-Правительство РФ установило региональные экспортные квоты на кукурузу с 15 февраля по 30 июня 2025 г. для аграриев Приморского края - 337 тыс. т и Амурской области - 200 тыс. т.
-
-Канада может сократить производство твердой пшеницы в 2025 г. на 12% до 5,2 млн т.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
 
