--- a/pbc-index_eng.qmd
+++ b/pbc-index_eng.qmd
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**PBC Commodity Index change to the previous week: [-1.9 п.]{.my-custom-class style="color:#f6514c;"}** ([**-2.0 п.**]{.my-custom-class style="color:#f6514c;"} over the previous four weeks)
+**PBC Commodity Index change to the previous week: [+0.1 п.]{.my-custom-class style="color:#44bf78;"}** ([**-5.1 п.**]{.my-custom-class style="color:#f6514c;"} over the previous four weeks)
 
-The biggest commodity price changes over the week: Crude Oil [**-3.7%**]{.my-custom-class style="color:#f6514c;"}, Natural Gaz [**-6.6%**]{.my-custom-class style="color:#f6514c;"}
+The biggest commodity price changes over the week: Fertilizers [**-3.9%**]{.my-custom-class style="color:#f6514c;"}, Natural Gaz [**+3.3%**]{.my-custom-class style="color:#44bf78;"}
 
-Over the week the Index has been mainly affected by: Crude Oil [**-1.2 p.**]{.my-custom-class style="color:#f6514c;"}, Natural Gaz [**-0.6 p.**]{.my-custom-class style="color:#f6514c;"}
+Over the week the Index has been mainly affected by: Fertilizers [**-0.1 p.**]{.my-custom-class style="color:#f6514c;"}, Natural Gaz [**+0.3 p.**]{.my-custom-class style="color:#44bf78;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 df_eng  <- read.xlsx('xls/ЦЦИ Сырьевой индекс.xlsx', sheet = 2, detectDates = TRUE)
