--- a/demo-subscription.qmd
+++ b/demo-subscription.qmd
@@ -11,6 +11,7 @@ format:
         content: "width=device-width, initial-scale=1"
 ---
 
+```{=html}
 <script>
 document.addEventListener("DOMContentLoaded", function() {
   var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
@@ -19,9 +20,11 @@ document.addEventListener("DOMContentLoaded", function() {
   });
 });
 </script>
+```
 
 <!-- Inline CSS -->
 
+```{=html}
 <style>
 @media only screen and (max-width: 768px) {
   
@@ -37,6 +40,7 @@ document.addEventListener("DOMContentLoaded", function() {
 }
 
 </style>
+```
 
 # ![](../images/icon-subscription.svg)Подписка
 
@@ -93,7 +97,7 @@ document.addEventListener("DOMContentLoaded", function() {
 |:-----------------:|:----------------:|:----------------:|:----------------:|
 | Экспортные цены на трубопроводный и сжиженный газ (СПГ) | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="10 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/Экспортные%20цены%20на%20трубопроводный%20и%20сжиженный%20газ%20(СПГ).pdf) |
 | Ставки фрахта СПГ | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="10 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/Ставки%20фрахта%20СПГ.pdf) |
-| Большой отчет о рынке газа и влияющих отраслях | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/Большой%20отчет%20о%20рынке%20газа%20и%20влияющих%20отраслях.pdf) |
+| Большой отчет о рынке газа и влияющих отраслях | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/gas/gas-quarterly-demo.pdf) |
 | Прогноз по добыче, экспорту, ценам | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | консенсус-прогноз | [Ссылка](https://pbc-index.ru/reports/gas/Прогноз%20по%20добыче,%20экспорту,%20ценам.pdf) |
 
 ## Российское растениеводство
@@ -101,7 +105,7 @@ document.addEventListener("DOMContentLoaded", function() {
 ![](images/icon-wheat.svg)
 
 | продукт | периодичность | формат | демоотчет |
-|:-----------------------:|:--------------:|:--------------:|:--------------:|
+|:---------------------:|:---------------:|:---------------:|:---------------:|
 | Экспортные цены на пшеницу и нетбэки | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/Экспортные%20цены%20на%20пшеницу%20и%20нетбэки.pdf) |
 | Подсолнечное масло | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="первый вторник месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/подсолнечное%20масло.pdf) |
 | Ставки фрахта зерна | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый вторник рабочей недели"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/agro/Ставки%20фрахта%20зерна.pdf) |
@@ -114,7 +118,7 @@ document.addEventListener("DOMContentLoaded", function() {
 ![](images/icon-trolley.svg)
 
 | продукт | периодичность | формат | демоотчет |
-|:-----------------------------:|:------------:|:------------:|:------------:|
+|:-------------------------:|:-------------:|:-------------:|:-------------:|
 | Ставки на полувагоны | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Последний рабочий день месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/ставки%20на%20полувагоны.pdf) |
 | Фитинговые платформы и контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/Фитинговые%20платформы%20и%20контейнеры.pdf) |
 | Нэтбэки на уголь | [ежеквартально<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="14 марта / 16 июнь / 12 сентября / 12 декабря"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/logistics/Нэтбэки%20на%20уголь.pdf) |
@@ -126,12 +130,12 @@ document.addEventListener("DOMContentLoaded", function() {
 ![](images/icon-ship.svg)
 
 | Ставки фрахта на нефть | еженедельно | аналитика и котировки | Ссылка |
-|:---------------------------:|:-------------:|:-------------:|:-------------:|
+|:-----------------------:|:--------------:|:--------------:|:--------------:|
 | Ставки фрахта на нефтепродукты | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий вторник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/%D0%A1%D1%82%D0%B0%D0%B2%D0%BA%D0%B8%20%D1%84%D1%80%D0%B0%D1%85%D1%82%D0%B0%20%D0%BD%D0%B0%20%D0%BD%D0%B5%D1%84%D1%82%D0%B5%D0%BF%D1%80%D0%BE%D0%B4%D1%83%D0%BA%D1%82%D1%8B.pdf) |
 | Ставки фрахта на зерно | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий вторник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Ставки%20фрахта%20на%20зерно.pdf) |
 | Ставки фрахта на уголь | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий вторник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Ставки%20фрахта%20на%20уголь.pdf) |
-| Ставки фрахта на контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Фрахт контейнеров.pdf) |
-| Показатели цен на контейнеровозы | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Аренда контейнеровозов.pdf) |
+| Ставки фрахта на контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Фрахт%20контейнеров.pdf) |
+| Показатели цен на контейнеровозы | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Аренда%20контейнеровозов.pdf) |
 | Ставки перевалки нефтеналивных грузов, угля, зерна, контейнеров | [раз в полгода<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="31 января/31 июля"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/freight/Ставки%20перевалки.pdf) |
 
 ## Российские контейнеры
@@ -139,7 +143,7 @@ document.addEventListener("DOMContentLoaded", function() {
 ![](images/icon-barcode.svg)
 
 | продукт | периодичность | формат | демоотчет |
-|:-----------------------:|:--------------:|:--------------:|:--------------:|
+|:---------------------:|:---------------:|:---------------:|:---------------:|
 | Ставки на фитинговые платформы и контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Ставки%20на%20фитинговые%20платформы%20и%20контейнеры.pdf) |
 | Ставки фрахта на контейнеры | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Ставки%20фрахта%20на%20контейнеры.pdf) |
 | Показатели цен на контейнеровозы | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="15 число месяца или следующий рабочий день"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/containers/Показатели%20цен%20на%20контейнеровозы.pdf) |
@@ -150,9 +154,9 @@ document.addEventListener("DOMContentLoaded", function() {
 ![](images/icon-agro.svg)
 
 | продукт | периодичность | формат | демоотчет |
-|:-----------------------:|:--------------:|:--------------:|:--------------:|
+|:---------------------:|:---------------:|:---------------:|:---------------:|
 | Экспортные цены на азотные и фосфорные удобрения | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/fertilizers/Экспортные%20цены%20на%20азотные%20и%20фосфорные%20удобрения.pdf) |
-| Ставки фрахта удобрений | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/fertilizers/Ставки фрахта удобрений.pdf) |
+| Ставки фрахта удобрений | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждый рабочий понедельник"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/fertilizers/Ставки%20фрахта%20удобрений.pdf) |
 | Большой отчет о рынке газа и удобрениях и вэбинар | [ежеквартально <sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="второй месяц квартала"} | аналитика и котировки + вэбинар | [Ссылка](https://pbc-index.ru/reports/fertilizers/2024-05%20ЦЦИ%20Квартальный%20обзор%20по%20газу.pdf) |
 | Прогноз по производству, экспорту, ценам | ежеквартально | консенсус-прогноз | [Ссылка](https://pbc-index.ru/forecasts/forecast-fertilizers.html) |
 
@@ -161,22 +165,22 @@ document.addEventListener("DOMContentLoaded", function() {
 ![](images/icon-chemicals2.svg)
 
 | продукт | периодичность | формат | демоотчет |
-|:-----------------------------:|:------------:|:------------:|:------------:|
+|:-------------------------:|:-------------:|:-------------:|:-------------:|
 | Внутренние цены на метанол | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="середина месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/метанол%20демо-отчет%20.pdf) |
 | внутренние цены на ароматические углероды и их производные в России: стирол, бензол | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="каждую рабочую пятницу"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/внутренние%20цены%20на%20ароматические%20углероды%20демо-отчет.pdf) |
-| внутренние цены на каустическую соду \*new | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Каждый последний рабочий вторник месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/внутренние%20цены%20на%20каустическую%20соду%20демо-отчет.pptx.pdf) |
+| внутренние цены на каустическую соду \*new | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Каждый последний рабочий вторник месяца"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/caustic_soda_demo.pdf) |
 
 ## Цены на этилен и полиэтилен в России \*new
 
 ![](images/icon-chemicals2.svg)
 
 | продукт | периодичность | формат | демоотчет |
-|:-------------------------:|:-------------:|:-------------:|:-------------:|
+|:----------------------:|:--------------:|:--------------:|:--------------:|
 | отчет по внутренним цены на этилен и полиэтилен | [еженедельно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="Каждую рабочую пятницу"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/reports/chemicals/Этилен%20и%20Полиэтилен%20демо-отчет%20ред..pdf) |
 
 ## Сырьевой индекс \*new
 
 | продукт | периодичность | формат | демоотчет |
-|:-----------------------------:|:------------:|:------------:|:------------:|
+|:-------------------------:|:-------------:|:-------------:|:-------------:|
 | композитный индекс товаров российского экспорта на основе котировок ЦЦИ \*new | [ежемесячно<sup style="color: red; cursor: help;">\*</sup>]{data-bs-toggle="tooltip" title="новый продукт, готовим график"} | аналитика и котировки | [Ссылка](https://pbc-index.ru/pbc-index.html) |
 :::
