--- a/events/2024-10-27-crude.qmd
+++ b/events/2024-10-27-crude.qmd
@@ -10,6 +10,4 @@ lang: ru
 
 1.  Что такое цена на нефть?
 
-<iframe src="https://vk.com/video_ext.php?oid=-227681629&amp;id=456239020&amp;hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen>
-
-</iframe>
+<iframe src="https://vkvideo.ru/video_ext.php?oid=-227681629&id=456239020&hd=2" width="853" height="480" allow="autoplay; encrypted-media; fullscreen; picture-in-picture; screen-wake-lock;" frameborder="0" allowfullscreen></iframe>
