--- a/markets/freight-wheat.qmd
+++ b/markets/freight-wheat.qmd
@@ -17,32 +17,35 @@ format:
 ::: {.g-col-12 .g-col-sm-12 .g-col-xs-12 .g-col-xl-6 .g-col-md-6 .g-col-lg-6}
 ### Котировки
 
+*10.03.2025 Пшеница*
+
+**Китай намерен производить не менее 700 млн т зерна в год**
+
+Экспортные цены на пшеницу снизились на 3 долл. по сравнению с прошлой неделей. 
+
+Китай планирует произвести 700 млн т зерна в 2025 г., поддерживая достигнутый в 2024 г. уровень. 
+
+Индийские мукомолы просят правительство отменить или снизить 40% импортную пошлину на пшеницу для пополнения запасов. 
+
+![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
+
 *24.02.2025 Пшеница*
 
 **Экспортные цены на пшеницу движутся вверх, экспортная пошлина снижается**
 
-Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей. 
+Экспортные цены на пшеницу выросли на 2 долл. по сравнению с прошлой неделей.
 
 IGC снизил прогноз мировой торговли пшеницей в 2024/25 г. на 1 млн т до 197 млн т из-за снижения китайского импорта.
 
-Экспортная пошлина на пшеницу с 26 февраля 2025 г. снизится на 25% до  2 743 руб. на фоне укрепления рубля. 
+Экспортная пошлина на пшеницу с 26 февраля 2025 г. снизится на 25% до 2 743 руб. на фоне укрепления рубля.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
 
 *18.02.2025 Перевозки зерна*
 
 **Ставки фрахта в Черном море – островок стабильности в изменчивом мире**
 
 Ставки фрахта для балкеров типа Handysize из российских портов Черного моря остались на уровне предыдущей недели.Ставки фрахта для Coaster в АЧБ снизились на маршрутах “Азовское море – Мерсин” на 3,2% н/н и на “Азовское море – Египет” на 3,1% н/н. На остальных маршрутах ставки удержались от падения.
-
-![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
-
-*11.02.2025 Перевозки зерна*
-
-**Coaster падает в Средиземном море, а Handysize на дальних маршрутах**
-
-Ставки фрахта для балкеров типа Handysize в Черноморском регионе остались на уровне последних недель в направлении Турции, Египта и Алжира. На маршрутах в Бангладеш и Саудовскую Аравию ставки снизились в среднем на 2,7% н/н.
 
 ![](../images/icon-locker.svg){width="6%"}[Подробнее](../demo-subscription.qmd)
 
