--- a/markets/markets-coal.qmd
+++ b/markets/markets-coal.qmd
@@ -19,6 +19,34 @@ format:
 
 ### Котировки
 
+*17.03.2025* Уголь
+
+**Поддержки ценам не видно**
+
+Экспортные цены на энергетический уголь получили временную передышку, однако факторы давления остаются. Спрос на металлургический уголь остается ограниченным, цены двигаются вниз.   
+
+- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 112-114 долл./т CFR China.
+- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 111-115 долл./т CFR China.
+- Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 77 долл./т CFR China.
+
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
+
+
+*10.03.2025* Уголь
+
+**Угольный рынок под давлением**
+
+Цены продолжают снижаться, факторов поддержки пока не видно. Возможное ограничение объемов производства стали в Китае оказывает давление на настроения участников рынка.
+
+- Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 115-118 долл./т CFR China, 130 долл./т CFR India.
+- Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 115-117 долл./т CFR China.
+- Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 78 долл./т CFR China.
+
+![](../images/icon-locker.svg){width="6%"}
+[Подробнее](../demo-subscription.qmd)
+
+
 *03.03.2025* Уголь
 
 **Зимний сезон заканчивается на минорной ноте**
@@ -43,33 +71,6 @@ format:
 -   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 85 долл./т CFR China.
 
 ![](../images/icon-locker.svg){width="6%"} [Подробнее](../demo-subscription.qmd)
-
-*17.02.2025* Уголь
-
-**Уголь теряет свою стоимость**
-
-Цены на металлургический уголь продолжают снижаться, несмотря на небольшое оживление на рынке Индии в начале февраля. Спрос на энергетический уголь также медленно ослабевает по мере приближения периода межсезонья.
-
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 123-128 долл./т CFR China.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 86 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
-
-*10.02.2025* Уголь
-
-**Металлургический уголь смотрит на Индию вместо Китая**
-
-Окончание празднования Нового года по лунному календарю не принесло торговой активности на рынок КНР. Цены в Китае остаются на прежнем уровне и экспортеры больше смотрят на альтернативные рынки. В Индии наблюдается спрос на металлургический уголь после введения ограничений на объемы импорта кокса. Стоимость пылеугольного топлива (PCI), приведенная к базису FOB Дальний Восток, на 13-18 долл./т выше при поставках в Индию по сравнению с рынком КНР.
-
--   Рассматриваемый уровень цен на пылеугольное топливо (PCI LV): 150-155 долл./т CFR India, 130 долл./т CFR China.
--   Рассматриваемый уровень цен на коксующийся уголь марки ГЖ: 130 долл./т CFR China.
--   Рассматриваемый уровень цен на энергетический уголь 5500 ккал/кг: 87 долл./т CFR China.
-
-![](../images/icon-locker.svg){width="6%"}
-
-[Подробнее](../demo-subscription.qmd)
 
 ### События
 
