--- a/pbc-index.qmd
+++ b/pbc-index.qmd
@@ -115,11 +115,11 @@ index_plot
 
 ------------------------------------------------------------------------
 
-**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [-1,9 п.]{.my-custom-class style="color:#f6514c;"}** ([**-2,0 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
+**Изменение Сырьевого индекса ЦЦИ к предыдущей неделе: [+0,1 п.]{.my-custom-class style="color:#44bf78;"}** ([**-5,1 п.**]{.my-custom-class style="color:#f6514c;"} за последние 4 недели)
 
-Наибольшие изменения цен товаров за неделю: нефть [**-3,7%**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-6,6%**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие изменения цен товаров за неделю: удобрения [**-3,9%**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**+3,3%**]{.my-custom-class style="color:#44bf78;"}
 
-Наибольшие вклады в изменение Индекса за неделю: нефть [**-1,2 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**-0,6 п.**]{.my-custom-class style="color:#f6514c;"}
+Наибольшие вклады в изменение Индекса за неделю: удобрения [**-0,1 п.**]{.my-custom-class style="color:#f6514c;"}, трубопроводный газ [**+0,3 п.**]{.my-custom-class style="color:#44bf78;"}
 
 ```{r, warning = FALSE, echo = FALSE, message = FALSE}
 
